2014-07-23  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile, arith.c, arith.h, combi.c, combi.h, configure, debug.c,
	debug.h, eval.c, eval.h, filter.c, filter.h, gc.c, gc.h, hash.c,
	hash.h, lib.c, lib.h, match.c, match.h, parser.h, parser.l, parser.y,
	rand.c, rand.h, regex.c, regex.h, signal.c, signal.h, stream.c,
	stream.h, syslog.c, syslog.h, txr.c, txr.h, unwind.c, unwind.h,
	utf8.c, utf8.h: Synchronize license header with LICENSE.

2014-07-22  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (subst_vars): Bugfix: I neglected to apply the
	filter which is in effect to the result of interpolating a TXR Lisp
	expression, oops!

2014-07-22  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (METANUM): Forgotten %right declaration for this
	token has been resulting in a shift-reduce conflict.

2014-07-22  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Add a check, in the case that we cannot make an
	executable, whether this is due to being required to use C99.
	For instance, the Solaris environment requires compilation
	using the C99 dialect if _XOPEN_SOURCE is set to 600 or higher.

	* debug.c: When compiling as C99, we have to obey the special
	C99 conventions for instantiating inline functions.

	* hash.c: Likewise.

	* lib.c: Likewise.

	* parser.y: Likewise.

	* unwind.c: Likewise.

2014-07-21  Kaz Kylheku  <kaz@kylheku.com>

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version.

	* share/txr/stdlib/ver.txr: Likewise

	* arith.c (log2): Change to static.

2014-07-22  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (me_case): Fix quoting issue in expansion.

2014-07-20  Kaz Kylheku  <kaz@kylheku.com>

	* signal.c (set_sig_handler): Set up and tear down alternate
	stack for SIGBUS also, not only for SIGSEGV. On Linux,
	when stack growth collides with another memory mapping,
	it triggers a SIGBUS not SIGSEGV, which occurs when the
	process limit on stack size is exceeded. In either
	situation, we need an alternative stack.

2014-07-20  Kaz Kylheku  <kaz@kylheku.com>
